# pizza-oven-py

./: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  ingredients-db-old.csv  ingredients-db.csv  kitchen_order.json  main.py  poetry.lock.old  pyproject.toml  recipe.json
.cache/local/: ingredient_manifest.json
.cache/oven_params/: oven_params.json
.cache/recipes/: recipe-0.json  recipe-1.json  recipe-2.json  recipe-3.json  recipe-4.json  recipe-5.json  recipe-6.json  recipe-7.json  recipe-8.json
.postman/: Pizza Kitchen.postman_collection.json  Pizza Kitchen.postman_environment.json
app/: main.py
app/core/: box.py  config.py  crust.py  custom_ko.py  dropbox_adapter.py  ethereum_adapter.py  ingredients_db.py  ipfs_adapter.py  metadata.py  natron_base.py  order_task.py  paper.py  prep_line.py  random.py  random_num.py  rarity.py  recipe_box.py  render_config.py  renderer.py  repository.py  sauce.py  scatter.py  storage.py  utils.py
app/models/: __init__.py  auth_tokens.py  base.py  chainlink_token.py  order.py  pizza.py  prep.py  recipe.py  render_task.py
chainlink/: .api.credentials.rinkeby  .env  .env.example  .env.mainnet  .env.rinkeby  .password  Dockerfile  job.order.runLog.json  job.order.runLog.rinkeby.json  job.order.runLog.spec.toml  job.order.web.json
data/: extra_kitchen_order.json  kitchen_order_cheese.json  recipe_old.json  sample_kitchen_extra.json  sample_kitchen_order.json  sample_kitchen_order_cheese.json  sample_kitchen_order_crust.json  sample_kitchen_order_mvp.json  sample_kitchen_order_sauce.json  sample_recipe.json  sheets_auth_token.json  topping-size-db.csv
data/contracts/: RarePizzasSeedStorage.json
data/data_bak/: sample_kitchen_order_cheese.json
data/ko_stress_test/: 4000-pepperoni.json  4010-salami.json  4020-turkeysausage.json  4030-spam.json  4040-ham.json  4050-duck.json  4060-turkey.json  4070-prosciutto.json  4080-butterchicken.json  4090-beef.json  4100-chickentikka.json  4110-chorizo.json  4120-bbqchicken.json  4130-bacon.json  4150-sausage.json  4160-meatballs.json  4180-buffalochicken.json  4190-charsiupork.json  4200-cheeseburger.json  4210-kitten.json  (+333 more)
database/: Dockerfile
docs/: Fixing Pizza Errors.md
ingredients-db/: 8160-extra-pizza-mafia.psd
natron/: arrangement_layout.ntp  arrangement_test.ntp  bake.csh  bake_cheese.nps  bake_sauce-liquid.nps  box.ntp  box.py  cheese.ntp  cheese2.ntp  combo-db.csv  combo.ntp  crust.ntp  crust.py  crust2.ntp  delivery.ntp  delivery_chef.ntp  extra-test.ntp  extra.ntp  extra_cut.ntp  extras.ntp  ingredients-db.csv  layout.nl  layout_wide.nl  open-box.ntp  oven_v001.ntp  oven_v300.ntp  pizza-stack.ntp  presets_reader.nps  presets_writer.nps  sauce.ntp  sauce.py  seasoning.ntp  slice.ntp  slicing_v001.ntp  slicing_v002.ntp  split.ntp  stats.txt  topping-test.ntp  topping.ntp  toppings.ntp  (+2 more)
rarepizza-chart/: Chart.yaml  values.yaml
secrets/: .chainlink.wallet.1.rinkeby  UTC--2021-05-01T18-03-43.214447000Z--bBa8473580dB06239f1383753e1ed714E4eEd6f5  sheets.json
(+77 files in other folders)
