[tool.poetry]
name = "pizza-oven-py"
version = "0.0.1"
description = "Rare Pizzas Kitchen"
license = "GPL"
authors = ["The Pizza Mafia <hello@rarepizzas.com>"]
readme = "README.md"
homepage = "https://rarepizzas.com"
repository = "https://github.com/PizzaDAO/pizza-oven-py"
documentation = "https://github.com/PizzaDAO/pizza-oven-py"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "~0.61"
uvicorn = "~0.11"
ipfshttpclient = "^0.7.0"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]
black = { version = "20.8b1", allow-prereleases = true }
fastapi = "~0.61"
mypy = "^0.812"
pydeps = "*"
pylint = "*"
pytest = "*"
requests = "^2.24.0"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = '''
  duplicate-code,
  fixme,
  invalid-name,
  missing-module-docstring,
  missing-function-docstring,
  no-value-for-parameter,
  redefined-builtin,
  too-few-public-methods,
  too-many-arguments,
  too-many-branches,
  too-many-function-args,
  too-many-lines,
  too-many-locals,
  too-many-nested-blocks,
  unnecessary-lambda,
  '''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
