[tool.poetry]
name = "pizza-oven-py"
version = "0.0.1"
description = "Rare Pizzas Kitchen"
license = "GPL"
authors = ["The Pizza Mafia <hello@rarepizzas.com>"]
readme = "README.md"
homepage = "https://rarepizzas.com"
repository = "https://github.com/PizzaDAO/pizza-oven-py"
documentation = "https://github.com/PizzaDAO/pizza-oven-py"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.8"
ipfshttpclient = "0.8.0a2"
Pillow = "^8.3.1"
base58 = "^2.1.0"
dropbox = "^11.18.0"
google-api-python-client = "^2.19.1"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
fastapi = "^0.70.0"
web3 = "^5.24.0"
firebase-admin = "^5.0.3"

[tool.poetry.dev-dependencies]
black = { version = "20.8b1", allow-prereleases = true }
mypy = "^0.812"
pydeps = "*"
pylint = "*"
pytest = "*"
requests = "^2.24.0"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = '''
  duplicate-code,
  fixme,
  invalid-name,
  missing-module-docstring,
  missing-function-docstring,
  no-value-for-parameter,
  redefined-builtin,
  too-few-public-methods,
  too-many-arguments,
  too-many-branches,
  too-many-function-args,
  too-many-lines,
  too-many-locals,
  too-many-nested-blocks,
  unnecessary-lambda,
  '''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
